--- a/entrenadores.html
+++ b/entrenadores.html
@@ -73,7 +73,7 @@
                     <div class="card-inner">
                         <div class="card-front">
                             <div class="trainer-image">
-                                <img src="img/trainer-1.jpg" alt="Carlos Rodríguez">
+                                <img src="img/class-musculacion.jpg" alt="Carlos Rodríguez">
                             </div>
                             <div class="trainer-info">
                                 <h3>Carlos Rodríguez</h3>
