--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="carousel-slide">
                         <div class="testimonial-card">
                             <div class="testimonial-image">
-                                <img src="img/testimonial-1.jpg" alt="Testimonio de María">
+                                <img src="img/testimonial.jpg" alt="Testimonio de María">
                             </div>
                             <div class="testimonial-content">
                                 <div class="rating">
@@ -179,7 +179,7 @@
                     <div class="carousel-slide">
                         <div class="testimonial-card">
                             <div class="testimonial-image">
-                                <img src="img/testimonial-2.jpg" alt="Testimonio de Carlos">
+                                <img src="img/testimonial.jpg" alt="Testimonio de Carlos">
                             </div>
                             <div class="testimonial-content">
                                 <div class="rating">
@@ -199,7 +199,7 @@
                     <div class="carousel-slide">
                         <div class="testimonial-card">
                             <div class="testimonial-image">
-                                <img src="img/testimonial-3.jpg" alt="Testimonio de Laura">
+                                <img src="img/testimonial.jpg" alt="Testimonio de Laura">
                             </div>
                             <div class="testimonial-content">
                                 <div class="rating">
